# attendance-automation-MSP

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  input.csv  main.py
attendance_tool/: Processor.py  __init__.py  argument_parser.py  exporter.py  processor.py
attendance_tool/gui/: __init__.py  gui.py
attendance_tool_msp/: LICENSE  README.md  pyproject.toml
attendance_tool_msp/docs/: requirements.txt
attendance_tool_msp/docs/source/: attendance_tool_msp.gui.rst  attendance_tool_msp.rst  conf.py  index.rst  modules.rst
attendance_tool_msp/src/attendance_tool_msp/: argument_parser.py  exporter.py
attendance_tool_msp/src/attendance_tool_msp/gui/: __init__.py
datasets/: USAGE.md  instructor_edge_cases.csv  instructor_names.csv  large_data.csv  mixed_data.csv  no_email.csv  small_data.csv  time_formats.csv  valid_data.csv
notes/: Documenting - Sphinx & Read The Docs.docx  Packaging - UV & PyPi Setup.docx
test_datasets/: USAGE.md  edge_cases.csv  invalid_data.csv
tests/: USAGE.md  __init__.py  test_argument_parser.py  test_exporter.py  test_processor.py
