[project]
name = "attendance-tool-msp"
version = "0.1.0"
description = "Automated attendance processing and reporting tool for MSP technical sessions."
readme = "README.md"
license = "MIT"
authors = [
    { name = "mohamedelziat50", email = "mohamedelziat50@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-docx",
    "docx2pdf",
    "validators",
    "customtkinter",
    "pillow",
]

[project.links]
Repository = "https://github.com/mohamedelziat50/attendance-automation-MSP"
Documentation = "https://yourdomain.com/docs"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
